src/index.css
@font-face {
  font-family: "SimplexNeue";
  src: url(./assets/fonts/SimplexNeue-Regular.woff);
}

:root {
  --highlightColorHover: #f00;
  --highlightColorClick: #f00;

  --ease-out: cubic-bezier(0, 1, 1, 1);
}

body {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  width: 100vw;
  height: 100vh;
  font-family: SimplexNeue;
  background-color: #fff;
  overflow: hidden !important;
}

/* ===== Scrollbar CSS ===== */
/* Firefox */
* {
  scrollbar-width: thin;
  scrollbar-color: #c0c0c0 #ffffff;
}

/* Chrome, Edge, and Safari */
*::-webkit-scrollbar {
  width: 3px;
}

*::-webkit-scrollbar-track {
  background: #fff;
}

*::-webkit-scrollbar-thumb {
  background-color: #c0c0c0;
  border-radius: 10px;
  border: 0px solid #fff;
}

.componentContainer {
  display: grid;
  width: 100vw;
  height: 100vh;
  grid-template-columns: 0.25fr 1fr;
  grid-template-rows: auto 5vh 1fr;

  padding: 10px;
  margin: 0;
  box-sizing: border-box;
  row-gap: 10px;
  overflow: hidden !important;
  transition: all 0.4s ease;
}

.componentContainer.hiddenInfo {
  grid-template-columns: 0fr 1fr;
}

.infoContainer {
  width: 100%;
  height: 100%;
  overflow-y: scroll;
  position: relative;
  grid-row-start: 3;
  grid-column-start: 1;

  box-sizing: border-box;
  padding: 10px;

  padding-right: 20px;

  border-right: 1px solid #ccc;
  opacity: 1;
}
.infoContainer.hidden {
  opacity: 0;
  padding: 0;
}

.closeInfoContainer {
  position: absolute;
  right: 10px;
  top: 5px;
  font-size: 10px;
  -webkit-text-stroke-width: 0.4px;
  -webkit-text-stroke-color: black;
  cursor: pointer;
  display: block !important;
  white-space: nowrap;
  justify-content: center;
  align-self: center;
  align-items: center;
}
.showInfo {
  position: absolute;
  right: calc(100vw - 90px);
  white-space: nowrap;
  cursor: pointer;
  font-size: 11px;
  -webkit-text-stroke-width: 0.4px;
  -webkit-text-stroke-color: black;
  top: 140px;
}
.showInfo.hidden {
  display: none;
}
.closeInfoContainer:before,
.showInfo:before {
  content: "[";
  margin-right: 0;
  transition: margin-right 0.3s var(--ease-out);
}
.closeInfoContainer:after,
.showInfo:after {
  content: "]";
  margin-left: 0;
  transition: margin-left 0.3s var(--ease-out);
}
.closeInfoContainer:hover:before,
.showInfo:hover:before {
  content: "/";
  margin-right: 0.5em;
}

.closeInfoContainer:hover:after,
.showInfo:hover:after {
  content: "/";
  margin-left: 0.5em;
}

.infoText {
  font-size: 11.5px;
  line-height: 1.2;
  -webkit-text-stroke-width: 0.4px;
  -webkit-text-stroke-color: black;
}

.shareholder,
.percentage {
  display: inline;
}
.shareholderContainer {
  font-size: 13.5px;
  line-height: 0.7;
  text-align: left;
}
.shareholderTitle {
  margin: 0;
  padding: 0;
  margin-bottom: 5px;
}

.infoDate,
.infoSector {
  font-size: 10.5px;
  line-height: 1.2;
}

.infoTitle {
  max-width: 90%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 25px;
}

.textElement {
  font-family: helvetica;
  font-size: 8px;
  text-align: center;
}

.navigationContainer {
  width: 100%;
  grid-row-start: 0;
  grid-column-start: 1;
  grid-column-end: 3;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
.navigationContainer > ul {
  margin: 0;
  padding: 0;
  margin-bottom: 5px;
}
.navigationContainer > ul > li {
  margin: 0;
  padding-right: 10px;
}
.nodePath {
  color: #000;
  font-size: 16px;
  pointer-events: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 100vw;
  overflow: hidden;
}
.groupFilters {
  font-size: 14px;
}
.sectorFilters {
  font-size: 12px;
}
.filterItem,
.sectorFilter {
  display: inline;
  margin-right: 30px;
  grid-row-start: 0;
  grid-row-end: 1;
  grid-column-start: 0;
  grid-column-end: 3;
  cursor: pointer;
}
.filterItem.highlighted {
  color: var(--highlightColorClick) !important;
}
.filterItem.hovered {
  color: var(--highlightColorHover);
}

.filterItem:hover .dividerLine {
  color: #000 !important;
}

.sectorFilter {
  color: #ccc;
}
.sectorFilter:hover {
  color: #000;
}
.sectorFilter.active {
  color: #000;
}
.sectorFilter:hover .dividerLine {
  color: #ccc !important;
}
.sectorFilter.active .dividerLine {
  color: #ccc !important;
}

.progress-container {
  width: 100%;
  height: 15px;
  background: transparent;
  border-bottom: 1px solid black;
  grid-row-start: 2;
  grid-column-start: 1;
  grid-column-end: 3;
  box-sizing: border-box;
  margin-top: 10px;
}
.progress-container > .progressMarks {
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: repeat(10, 1fr);
  position: relative;
}

.progress-bar {
  height: 100%;
  background-color: #000;
  position: absolute;
  z-index: 0;
  border-top: 6px solid black;
  top: -6px;
}

.progress-container > .progressMarks > span {
  border-right: 1px solid #fff;
  padding-left: 5px;
  box-sizing: border-box;
  font-size: 12px;
  position: relative;
  mix-blend-mode: difference;
  color: #fff;
  top: -2px;
}

.graphCanvas {
  width: 100%;
  height: 100%;
  position: relative;
}

.buttonContainer {
  grid-row-start: 3;
  grid-column-start: 2;
  max-width: 80px;
  max-height: 20px;
  display: flex;
  position: relative;
  top: 95%;
  left: 95%;
}
.buttonContainer > button {
  display: inline;
  margin-right: 10px;
  background: #fff;
  border: none;
  text-decoration: none;
  cursor: pointer;
  font-size: 22px;
}

foreignObject {
  background-color: pink;
  width: 150px;
  transform: translate(-75px, -40px);
  -webkit-transform: translate(-75px, -20px);
  -moz-transform: translate(-75px, -40px);
  -ms-transform: translate(-75px, -40px);
  -o-transform: translate(-75px, -40px);
}
@media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
  foreignObject {
    transform: translate(-75px, -30px);
    -webkit-transform: translate(-75px, -32px);
  }
}

circle.largeNode + foreignObject {
  height: 150px;
  transform: translate(-75px, -20px);
}
@media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
  circle.largeNode + foreignObject {
    transform: translate(-75px, -60px);
    -webkit-transform: translate(-75px, -62px);
  }
}
@media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) and (max-device-width: 600px) {
  circle.largeNode + foreignObject {
    transform: translate(-75px, -40px);
    -webkit-transform: translate(-75px, -42px);
  }
}
circle.largeNode + foreignObject > h5 {
  font-size: 22px;
}

foreignObject > h5 {
  font-size: 14px;
  color: #fff;
  text-align: center;
  vertical-align: center;
  font-family: SimplexNeue;
  line-height: 1.2;
  text-overflow: ellipsis;
  max-height: 30px;
  max-width: 300px;
}
foreignObject > h5.hovered {
  color: var(--highlightColorHover);
  cursor: pointer;
}
.nameTag {
  background-color: #f5f5f5;
  border-radius: 2px;
}

foreignObject {
  pointer-events: none;
}

foreignObject:hover {
  cursor: pointer;
}

foreignObject > h5 > p {
  margin: 0;
  padding: 0;
}

.smallNode > h5 {
  color: #f00;
}

.zoomButtonContainer {
  right: 0px;
  position: absolute;
  bottom: 10px;
  text-align: right;
  padding-right: 20px;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 2;
}

.zoomButton:nth-child(2) {
  grid-column-start: 1;
  grid-row-start: 0;
  text-align: left;
  right: 0;
}
.zoomButton:nth-child(3) {
  grid-column-start: 1;
  grid-row-start: 2;
  text-align: left;
  right: 0;
}
.zoomButton:hover {
  color: #c1c0c0;
  cursor: pointer;
}
.zoomNotice {
  grid-column-start: 1;
  grid-row-start: 2;
  padding-right: 20px;
  color: #c1c0c0;
  pointer-events: none !important;
}
.dropdownButton {
  display: none;
}

.zoomNoticeCursor {
  opacity: 0;
  font-size: 13px;
  background: #fff;
  color: #000;
  width: auto;
  height: auto;
  border: 1px solid black;
  border-radius: 4px;
  position: absolute;
  pointer-events: none;
  padding: 3px;
  transition: opacity 0.3s ease-in-out;
}
.zoomNoticeCursor.visible {
  opacity: 1;
}

@media only screen and (max-width: 900px) {
  .componentContainer {
    grid-template-columns: 0fr 1fr;
  }
  .infoContainer {
    opacity: 0;
    padding: 0;
  }
}

/* Phones and Tablets */
@media only screen and (max-width: 600px),
  only screen and (min-device-width: 601px) and (max-device-width: 1080px) and (-webkit-min-device-pixel-ratio: 1) {
  .nodePath {
    display: none;
  }

  .infoContainer {
    display: none;
  }

  .componentContainer {
    grid-template-columns: 1fr;
  }

  .dropdownButton {
    display: inline-block;
    margin: 0;
    padding: 0;
    font-size: 20px;
  }

  .dropdownIcon {
    transform: rotate(180deg);
    transition: transform 0.3s ease-in-out;
    margin-left: 8px;
  }
  .dropdownIcon.active {
    transform: rotate(0deg);
  }

  .sectorFilters,
  .groupFilters {
    display: none;
    position: absolute;
    z-index: 1;
    padding: 0;
    margin: 0;
    font-size: 20px;
    border-left: 1px solid #000;
    border: 1px solid black;
    border-top: none;
  }
  .sectorFilters.visible,
  .groupFilters.visible {
    display: block;
  }
  .sectorFilter,
  .filterItem {
    display: block;
    color: #fff;
    padding-left: 5px;
    background: #000;
    padding-bottom: 4px;
    padding-top: 5px;
  }

  .groupFilters > .filterItem {
    padding-bottom: 2px;
    padding-top: 8px;
  }

  .sectorFilter.active,
  .filterItem.active {
    color: #000;
    background: #fff;
  }

  .zoomNotice {
    display: none;
  }
  .zoomButtonContainer {
    grid-template-columns: 1fr;
  }

  .zoomButton {
    font-size: 32px;
  }
  .zoomButton:hover {
    color: #000;
  }
  .filterItem:hover .dividerLine {
    color: #fff !important;
  }
  .sectorFilter:hover {
    color: #fff !important;
  }
  .sectorFilter.active:hover {
    color: #000 !important;
  }
}

/* Phones */
@media only screen and (max-width: 600px) {
  .progress-container {
    height: 20px;
  }
  .progress-bar {
    border-top: 0px solid black;
    top: 0px;
  }

  .progress-container > .progressMarks > span {
    font-size: 1px;
    mix-blend-mode: normal;
    border-right: 1px solid #000;
    top: 0px;
  }

  .dropdownButton.groups {
    margin-left: 25%;
  }
  .sectorFilters.visible,
  .groupFilters.visible {
    width: 95vw;
  }
}

/* Tablets */
@media only screen and (min-device-width: 601px) and (max-device-width: 1080px) and (-webkit-min-device-pixel-ratio: 1) {
  .dropdownButton.groups {
    margin-left: 10%;
  }
  .sectorFilters.visible,
  .groupFilters.visible {
    width: 33vw;
  }
}

